# Emotion_Detection

./: README.md  emotion_detection_cam.py  pyproject.toml  requirements.txt  song_recommend.py  train.py  train_local.py  train_on_modal.py
