[project]
name = "mlsa-self-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
